[gd_scene load_steps=15 format=2]

[ext_resource path="res://screens/game_over/game_over.gd" type="Script" id=1]
[ext_resource path="res://default_theme.tres" type="Theme" id=2]
[ext_resource path="res://title_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://background.tscn" type="PackedScene" id=4]
[ext_resource path="res://organ/organs.png" type="Texture" id=5]
[ext_resource path="res://organ/icons.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 64, 192, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 1.5
} ]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 64, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 16, 16 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 4 )]
position = Vector2( 240, 160 )
allow_particles = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -67.0
margin_right = 144.0
margin_bottom = 67.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 288.0
margin_bottom = 51.0

[node name="LeftIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_top = 9.0
margin_right = 32.0
margin_bottom = 41.0
size_flags_vertical = 4
texture = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="VBoxContainer/HBoxContainer/LeftIcon"]
frames = SubResource( 4 )
playing = true

[node name="Title" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 36.0
margin_right = 252.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.14902, 0.0117647, 0.00392157, 1 )
text = "GAME OVER"
align = 1

[node name="RightIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 256.0
margin_top = 9.0
margin_right = 288.0
margin_bottom = 41.0
size_flags_vertical = 4
texture = SubResource( 5 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="VBoxContainer/HBoxContainer/RightIcon"]
position = Vector2( 32, 0 )
frames = SubResource( 4 )
playing = true

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
margin_top = 55.0
margin_right = 288.0
margin_bottom = 68.0
custom_colors/font_color = Color( 0.286275, 0.156863, 0.156863, 1 )
text = "score"
align = 1

[node name="BestScoreLabel" type="Label" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 288.0
margin_bottom = 85.0
custom_colors/font_color = Color( 0.286275, 0.156863, 0.156863, 1 )
text = "best score"
align = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 89.0
margin_right = 288.0
margin_bottom = 102.0
text = "you delivered:"
align = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 106.0
margin_right = 288.0
margin_bottom = 122.0
alignment = 1

[node name="OxygenIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer3"]
margin_left = 83.0
margin_right = 99.0
margin_bottom = 16.0
texture = SubResource( 6 )

[node name="OxygenLabel" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_left = 103.0
margin_top = 1.0
margin_right = 121.0
margin_bottom = 14.0
text = "x 0"
align = 1

[node name="EnergyIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer3"]
margin_left = 125.0
margin_right = 141.0
margin_bottom = 16.0
texture = SubResource( 7 )

[node name="EnergyLabel" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_left = 145.0
margin_top = 1.0
margin_right = 163.0
margin_bottom = 14.0
text = "x 0"
align = 1

[node name="NutritionIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer3"]
margin_left = 167.0
margin_right = 183.0
margin_bottom = 16.0
texture = SubResource( 8 )

[node name="NutritionLabel" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_left = 187.0
margin_top = 1.0
margin_right = 205.0
margin_bottom = 14.0
text = "x 0"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 126.0
margin_right = 288.0
margin_bottom = 171.0

[node name="QuitButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_right = 44.4022
margin_bottom = 45.0
text = "quit"

[node name="RetryButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 48.0
margin_right = 288.0
margin_bottom = 45.0
size_flags_horizontal = 3
text = "retry"
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/RetryButton" to="." method="_on_RetryButton_pressed"]
